--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+
+    
     <!-- Your custom styles go here -->
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="particles-js" style="background-color: black;">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,11 +55,12 @@
 
 <!-- Linkedin -->
             <a class="btn btn-primary" style="background-color: #0082ca;" href="https://www.linkedin.com/in/andrei-ciobirca/" role="button">
-                <i class="fab fa-linkedin-in"></i>
+                <i src="pictures/linkedinlogo.jpg" class="fab fa-linkedin-in"></i>
             </a>
             <!-- Github -->
             <a class="btn btn-primary" style="background-color: #333333;" href="https://github.com/ace-drei" role="button">
-                <i class="fab fa-github"></i>
+                <i class="fa-brands fa-github"></i>
+                
             </a>
             <h3 class="lead">Software Developer</h3>
             <p>Final year Computer Science with Software Development and Information Technology, student at Technological University Dublin,
@@ -65,6 +70,7 @@
                 <button type="button" class="btn btn-dark">Learn about me</button>
         </div>
     </section>
+
 
 
     <section id="about" class="py-5">
@@ -108,6 +114,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js
+"></script>
+    <script src="JS/Home.js"></script>
 
 </body>
 
