--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#interests">Interests</a>
+                    <a class="nav-link" href="#interests">Awards and Interests</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#contactModal" href="#">Contact</a>
@@ -74,6 +74,7 @@
 
 
     <section id="about" class="py-5">
+        
         <div class="container">
             <!-- Your about content goes here -->
         </div>
