--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Andrei Ciobirca</a>
+        <a class="navbar-brand" href="#"><b>Andrei Ciobirca</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,9 @@
 
             </a>
             <h3 class="lead">Software Developer</h3>
-            <p>Final year Computer Science with Software Development...</p>
+            <p>Final year Computer Science with Software Development and Information Technology, student at Technological University Dublin,
+                with hands-on experience as a Cloud Engineer from my internship. 
+                Proficient in cloud engineering and passionate about software development. </p>
             <button type="button" class="btn btn-dark" href="#about">Learn about me</button>
         </div>
     </section>
@@ -77,6 +79,7 @@
 
 
     <section id="about" class="py-5 text-black">
+        <div id="particles-js2"></div>
         <div class="container">
             <h1 class="text-center">About Me</h1>
             <div class="row">
@@ -106,7 +109,15 @@
     <section id="education" class="py-5 bg-light">
         <div class="container">
             <h1 class="text-center">Education</h1>
-            <!-- Your education details go here -->
+            EDUCATION
+
+<h1> University Dublin, Co. Dublin, Ireland.</h1>		<h2>Sept’ 2020 – Present</h2>
+<p>BSc (Honours) in Computer Science and Information Technology</p>
+<p>TUD Class Ambassador</p>
+
+
+
+
         </div>
     </section>
 
@@ -114,7 +125,9 @@
     <section id="projects" class="py-5 text-black">
         <div class="container">
             <h1 class="text-center">Projects</h1>
-            <!-- Your project details go here -->
+            <h2>E-commerce Bike SHop</h2>
+                <p>E-Commerce Web Application with Stock control and Reservation System. Collaborated with a team of 3 to deliver a fully developed product. On completion of the application, features such as purchasing, reservation, watchlist (CRUD functionality), and checkout (Stripe API) were available to users. 
+                    Tech Stack: Python, Django Web Framework, Selenium Web Driver, JavaScript, Pytest.</p>
         </div>
     </section>
 
@@ -122,7 +135,12 @@
     <section id="interests" class="py-5 bg-light">
         <div class="container">
             <h1 class="text-center">Awards and Interests</h1>
-            <!-- Your interests/hobbies go here -->
+            <h2>INTERESTS</h2>
+            <p>Leetcode, developing side projects, socialising with friends.</p>
+
+           <h2> Achievements</h2>
+        </p>Winner of the Best Future Solution at TUH Health Hackathon. </p>
+
         </div>
     </section>
 
@@ -131,7 +149,12 @@
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <!-- Your contact information goes here -->
+            <h1 class="text-center">Contact</h1>
+            <h1 class="text-center">Email</h1>
+            <h1 class="text-center">Phone</h1>
+            <h1 class="text-center">Address</h1>
+
+
         </div>
     </div>
 </div>
