Navbar follows scroll

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top:0; z-index: 1000; width: 100%;">
         <a class="navbar-brand" href="#"><b>Andrei Ciobirca</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,9 +111,11 @@
             <h1 class="text-center">Education</h1>
             EDUCATION
 
-<h1> University Dublin, Co. Dublin, Ireland.</h1>		<h2>Sept’ 2020 – Present</h2>
+<h2> University Dublin, Co. Dublin, Ireland.</h2>		
 <p>BSc (Honours) in Computer Science and Information Technology</p>
 <p>TUD Class Ambassador</p>
+
+Subjects
 
 
 
@@ -125,7 +127,7 @@
     <section id="projects" class="py-5 text-black">
         <div class="container">
             <h1 class="text-center">Projects</h1>
-            <h2>E-commerce Bike SHop</h2>
+            <h2>E-commerce Bike Shop</h2>
                 <p>E-Commerce Web Application with Stock control and Reservation System. Collaborated with a team of 3 to deliver a fully developed product. On completion of the application, features such as purchasing, reservation, watchlist (CRUD functionality), and checkout (Stripe API) were available to users. 
                     Tech Stack: Python, Django Web Framework, Selenium Web Driver, JavaScript, Pytest.</p>
         </div>
