--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p>Final year Computer Science with Software Development and Information Technology, student at Technological University Dublin,
                 with hands-on experience as a Cloud Engineer from my internship. 
                 Proficient in cloud engineering and passionate about software development. </p>
-            <button type="button" class="btn btn-dark" href="#about">Learn about me</button>
+     <!--       <button type="button" class="btn btn-dark" href="#about">Learn about me</button>-->
         </div>
     </section>
 
@@ -105,23 +105,50 @@
     </section>
 
 
-    <!-- Education Section -->
-    <section id="education" class="py-5 bg-light">
-        <div class="container">
-            <h1 class="text-center">Education</h1>
-            EDUCATION
+<!-- Education Section -->
+<section id="education" class="py-5 bg-light">
+    <div class="container">
+        <h1 class="text-center">Education</h1>
 
-<h2> University Dublin, Co. Dublin, Ireland.</h2>		
-<p>BSc (Honours) in Computer Science and Information Technology</p>
-<p>TUD Class Ambassador</p>
+        <!-- Carousel for Education Slides -->
+        <div id="educationCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <!-- Slide for Year 1 -->
+                <div class="carousel-item active text-center">
+                    <h2 style="">Year 1</h2>
+                    <p>BSc (Honours) in Computer Science and Information Technology</p>
+                    <p>TUD Class Ambassador</p>
+                    <!-- Add other content for Year 1 -->
+                </div>
 
-Subjects
+                <!-- Slide for Year 2 -->
+                <div class="carousel-item">
+                    <h2>Year 2</h2>
+                    <!-- Add content for Year 2 -->
+                </div>
 
+                <!-- Slide for Year 3 -->
+                <div class="carousel-item">
+                    <h2>Year 3</h2>
+                    <!-- Add content for Year 3 -->
+                </div>
 
+                <!-- Add more slides for additional years -->
 
+            </div>
 
+            <!-- Navigation Buttons -->
+            <a class="carousel-control-prev" href="#educationCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#educationCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Projects Section -->
     <section id="projects" class="py-5 text-black">
