--- a/index.html
+++ b/index.html
@@ -77,32 +77,47 @@
 
 
 
-
-    <section id="about" class="py-5 text-black">
-        <div id="particles-js2"></div>
-        <div class="container">
-            <h1 class="text-center">About Me</h1>
-            <div class="row">
-                <div class="col-md-6">
-                    <h2>Who am I?</h2>
-                    <p>My name is Andrei Ciobirca and I am a final year Computer Science with Software Development and
-                        Information Technology student at Technological University Dublin.
-                        I am a passionate and hardworking individual who is always looking to learn new skills and
-                        technologies.
-                        I am currently looking for a graduate position in the software development industry. </p>
-                </div>
-                <div class="col-md-6">
-                    <h2>What do I do?</h2>
-                    <p>I am a software developer with a passion for cloud engineering.
-                        I have experience in developing web applications using Java, Spring Boot, JavaScript, HTML and
-                        CSS.
-                        I also have experience in cloud engineering from my internship where I worked with AWS,
-                        Terraform and Ansible.
-                        I am currently learning Python and React. </p>
-                </div>
-
+<!-- about Section -->
+<section id="about" class="py-5 text-black">
+    <div class="container">
+        <h1 class="text-center">About Me</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <h2>Who am I?</h2>
+                <p>My name is Andrei Ciobirca, and I am a final year Computer Science with Software Development and
+                    Information Technology student at Technological University Dublin. I am a passionate and hardworking
+                    individual who is always looking to learn new skills and technologies. I am currently looking for a
+                    graduate position in the software development industry.</p>
+                
+                <p>I am a software developer with a passion for cloud engineering. I have experience in developing web
+                    applications using Java, Spring Boot, JavaScript, HTML, and CSS. I also have experience in cloud
+                    engineering from my internship where I worked with AWS, Terraform, and Ansible. I am currently
+                    learning Python and React.</p>
             </div>
-    </section>
+            <div class="col-md-6">
+                <h2>Languages</h2>
+                <!-- Display icons for languages -->
+                <div class="icon-container">
+                    <!-- Existing icons -->
+                    <div class="icon-item"><i class="fab fa-java fa-3x" title="Java"></i><p>Java</p></div>
+                    <div class="icon-item"><i class="fas fa-c fa-3x" title="C"></i><p>C</p></div>
+                    <div class="icon-item"><i class="fab fa-html5 fa-3x" title="HTML"></i><p>HTML</p></div>
+                    <div class="icon-item"><i class="fab fa-js fa-3x" title="JavaScript"></i><p>JavaScript</p></div>
+                    <div class="icon-item"><i class="fab fa-css3-alt fa-3x" title="CSS"></i><p>CSS</p></div>
+                    <div class="icon-item"><i class="fab fa-react fa-3x" title="React"></i><p>React</p></div>
+                    <div class="icon-item"><i class="fab fa-node-js fa-3x" title="Node.js"></i><p>Node.js</p></div>
+                    <div class="icon-item"><i class="fab fa-git fa-3x" title="Git"></i><p>Git</p></div>
+                    <div class="icon-item"><i class="fab fa-dev fa-3x" title="DevOps"></i><p>DevOps</p></div>
+                    <div class="icon-item"><i class="fab fa-rust fa-3x" title="Rust"></i><p>Rust</p></div>
+                    <div class="icon-item"><i class="fab fa-python fa-3x" title="Python"></i><p>Python</p></div>
+                    <div class="icon-item"><i class="fab fa-python fa-3x" title="Django"></i><p>Django</p></div>
+                    <!-- Add more icons as needed -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 <!-- Education Section -->
@@ -238,18 +253,34 @@
 
 
 
-    <!-- Projects Section -->
-    <section id="projects" class="py-5 text-black">
-        <div class="container">
-            <h1 class="text-center">Projects</h1>
-            <h2>E-commerce Bike Shop</h2>
-                <p>E-Commerce Web Application with Stock control and Reservation System. Collaborated with a team of 3 to deliver a fully developed product. On completion of the application, features such as purchasing, reservation, watchlist (CRUD functionality), and checkout (Stripe API) were available to users. 
-                    Tech Stack: Python, Django Web Framework, Selenium Web Driver, JavaScript, Pytest.</p>
-        </div>
-    </section>
+<!-- Projects Section -->
+<section id="projects" class="py-5 text-black">
+    <div id="particles-js"></div>
+    <div class="container">
+        <h1 class="text-center">Projects</h1>
+
+        <!-- Internship Project -->
+        <h2>SAP Integration Suite Web Application</h2>
+        <p>Developed a versatile web application during my internship at SAP Ireland. The application included a seat booking page for events, an integrated calendar page for scheduling, and a user profile section to highlight skills. This allowed users to connect with others possessing similar skills.</p>
+        <p><b>Tech Stack:</b> PHP, XAMPP, Ui5, Hana Cloud, Fiori.</p>
+
+        <!-- Academic Project -->
+        <h2>E-Commerce Web Application</h2>
+        <p>Collaborated with a team of 3 to deliver a fully developed E-Commerce Web Application with Stock control and Reservation System. On completion of the application, features such as purchasing, reservation, watchlist (CRUD functionality), and checkout (Stripe API) were available to users.</p>
+        <p><b>Tech Stack:</b> Python, Django Web Framework, Selenium Web Driver, JavaScript, Pytest.</p>
+    </div>
+
+
+
+</section>
+
+
+
+
 
     <!-- Interests Section -->
     <section id="interests" class="py-5 bg-light">
+        <div id="particles-js"></div>
         <div class="container">
             <h1 class="text-center">Awards and Interests</h1>
             <h2>INTERESTS</h2>
