--- a/index.html
+++ b/index.html
@@ -95,12 +95,11 @@
                     learning Python and React.</p>
             </div>
             <div class="col-md-6">
-                <h2>Languages</h2>
-                <!-- Display icons for languages -->
+                <h2>Languages & Tools</h2>
+                <!-- Display icons for languages and tools -->
                 <div class="icon-container">
-                    <!-- Existing icons -->
+                    <!-- Languages -->
                     <div class="icon-item"><i class="fab fa-java fa-3x" title="Java"></i><p>Java</p></div>
-                    <div class="icon-item"><i class="fas fa-c fa-3x" title="C"></i><p>C</p></div>
                     <div class="icon-item"><i class="fab fa-html5 fa-3x" title="HTML"></i><p>HTML</p></div>
                     <div class="icon-item"><i class="fab fa-js fa-3x" title="JavaScript"></i><p>JavaScript</p></div>
                     <div class="icon-item"><i class="fab fa-css3-alt fa-3x" title="CSS"></i><p>CSS</p></div>
@@ -108,10 +107,15 @@
                     <div class="icon-item"><i class="fab fa-node-js fa-3x" title="Node.js"></i><p>Node.js</p></div>
                     <div class="icon-item"><i class="fab fa-git fa-3x" title="Git"></i><p>Git</p></div>
                     <div class="icon-item"><i class="fab fa-dev fa-3x" title="DevOps"></i><p>DevOps</p></div>
+                    <div class="icon-item"><i class="fas fa-c fa-3x" title="C"></i><p>C</p></div>
                     <div class="icon-item"><i class="fab fa-rust fa-3x" title="Rust"></i><p>Rust</p></div>
                     <div class="icon-item"><i class="fab fa-python fa-3x" title="Python"></i><p>Python</p></div>
                     <div class="icon-item"><i class="fab fa-python fa-3x" title="Django"></i><p>Django</p></div>
-                    <!-- Add more icons as needed -->
+                    <div class="icon-item"><i class="fas fa-terminal fa-3x" title="Bash"></i><p>Bash</p></div>
+                    <div class="icon-item"><i class="fab fa-css3-alt fa-3x" title="CSS"></i><p>CSS</p></div>
+                    <div class="icon-item"><i class="fab fa-aws fa-3x" title="AWS"></i><p>AWS</p></div>
+                    <div class="icon-item"><i class="fas fa-database fa-3x" title="MySQL"></i><p>MySQL</p></div>
+                    <div class="icon-item"><i class="fas fa-database fa-3x" title="MariaDB"></i><p>MariaDB</p></div>
                 </div>
             </div>
         </div>
