Upated Projects Section

--- a/index.html
+++ b/index.html
@@ -281,9 +281,10 @@
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <div class="card-body">
-                        <h2>Project 2</h2>
-                        <p>Description of Project 2.</p>
-                        <p><b>Tech Stack:</b> Technologies used in Project 2.</p>
+                        <h2>TUD Streaming Website</h2>
+                        <p>Final Year Project</p>
+                        <p><b>Tech Stack:</b> JavaScript, NodeJs, JS, HTML, CSS, Content Devlivery Platform </p>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#projectModal2">Details</button>
                     </div>
                 </div>
             </div>
@@ -378,6 +379,50 @@
                 <!-- GitHub Repo Button -->
                 <div class="text-center mt-3">
                     <a href="https://github.com/ace-drei/SAP-Internship-Project" target="_blank"
+                        class="btn btn-dark">GitHub Repository</a>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+        </div>
+
+
+        <!-- Project 2 Modal -->
+        <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="projectModal1Label">Project 1 Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- Add more details here -->
+                    <p>
+                        The heart of this streaming service lies in its robust tech stack. JavaScript, the backbone of dynamic web applications, was employed to enhance interactivity and responsiveness. Node.js served as the server-side runtime,
+                         facilitating efficient handling of backend processes and enabling scalability for potential growth. The visual aesthetics were meticulously crafted using cascading style sheets (CSS), ensuring an immersive and 
+                         visually appealing interface that mimicked the sleek design synonymous with popular streaming platforms.</p>
+
+                    <p> The central focus of this Netflix clone was to replicate the core features that users have come to expect from such platforms. It boasted a user-friendly interface that allowed for easy navigation through a vast library 
+                        of multimedia content. Leveraging JavaScript, the platform offered seamless video streaming with a player that supported high-quality playback and adaptive streaming based on the user's internet connection.</p>
+
+                    <p> In addition to video playback, the project incorporated user account functionalities and authentication mechanisms. Users could create profiles, manage viewing history, and receive personalized recommendations based on their preferences.
+                         The inclusion of authentication using Node.js ensured secure access to user-specific content and contributed to a personalized and secure user experience.</p>
+
+                    <p> The project also paid attention to the social aspect of streaming, implementing features that allowed users to share their favorite shows or movies on social media platforms. This social integration aimed to enhance user engagement and broaden 
+                        the platform's reach through user-generated content promotion.</p>
+
+                    <p> As a final year project, this Netflix clone not only showcased my technical skills but also highlighted my ability to conceptualize, design, and implement a complex web application. The fusion of JavaScript, Node.js, and CSS in this project not only reflected 
+                        my understanding of modern web development practices but also demonstrated my capability to create a user-centric streaming service that could potentially rival existing platforms in terms of functionality and design.</p>
+                                        </div>
+
+                <!-- GitHub Repo Button -->
+                <div class="text-center mt-3">
+                    <a href="https://github.com/ace-drei/Streaming-Wesbite" target="_blank"
                         class="btn btn-dark">GitHub Repository</a>
                 </div>
                 <div class="modal-footer">
