Default work experience

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#work">Work</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
@@ -125,6 +128,57 @@
         </div>
     </div>
 </section>
+
+
+
+
+<!-- Work Experience Section -->
+<section id="work-experience" class="py-5">
+    <div class="container">
+        <h1 class="text-center"><b>Work Experience</b></h1>
+        <hr class="my-4">
+
+        <!-- Work Experience Content -->
+        <div class="row">
+            <!-- CoE Business Process Consultant Intern -->
+            <div class="col-md-6 mb-4">
+                <div class="rounded-box p-4" style="background-color: #f0f0f0; border-radius: 15px;">
+                    <h2>CoE Business Process Consultant Intern</h2>
+                    <p>SAP Ireland, Co. Dublin, Ireland</p>
+                    <p>Jan' 2023 – Sept' 2023</p>
+                    <ul>
+                        <li>Worked as part of the Governance team within the Cloud and Platform Engineering section.</li>
+                        <li>Developed solutions for SAP Integration Suite.</li>
+                        <li>Actively participated in common engineering practices, such as code/design reviews, environment strategy, and build/deployment pipeline development.</li>
+                        <li>Gained experience using Java, Python, XAMPP, BC400, SAPTECH, ADM415, CoE HANA performance.</li>
+                        <li>Experience with Process Integration (PI), SFTP, IDOC, SAPLOG ON, Content Modifier, Message Mapping, and Node Functions.</li>
+                        <li>Worked in an Agile Software delivery environment and gained exposure to continuous integration and continuous delivery tools.</li>
+                        <li>Established efficient communication lines for smooth teamwork across global teams.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- TUD Student Ambassador -->
+            <div class="col-md-6 mb-4">
+                <div class="rounded-box p-4" style="background-color: #f0f0f0; border-radius: 15px;">
+                    <h2>TUD Student Ambassador</h2>
+                    <p>Technological University Dublin, Ireland</p>
+                    <p>Sept' 2023 - Present</p>
+                    <ul>
+                        <li>Helping new students get settled into college.</li>
+                        <li>Gave tours and talks to new students.</li>
+                        <!-- Add more tasks or responsibilities as needed -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 
 
 
@@ -309,8 +363,8 @@
             </div>
 
             <!-- Additional Projects (Initially Hidden) -->
-            <div class="col-md-4 mb-4 d-none project-card" id="project4">
-                <div class="card h-100">
+            <div class="col-md-4 mb-4 d-none additional-project-card" id="project4">
+                 <div class="card h-100">
                     <div class="card-body d-flex flex-column">
                         <h2>Python Snake game</h2>
                         <p class="flex-grow-1">Developing a python snake game from scratch.</p>
