fixed 'Work' on nav

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#education">Education</a>
+                    <a class="nav-link" href="#work">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#work">Work</a>
+                    <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
@@ -133,7 +133,7 @@
 
 
 <!-- Work Experience Section -->
-<section id="work-experience" class="py-5">
+<section id="work" class="py-5">
     <div class="container">
         <h1 class="text-center"><b>Work Experience</b></h1>
         <hr class="my-4">
