Added map and footer at bottom of page

--- a/index.html
+++ b/index.html
@@ -662,6 +662,23 @@
 </div>
 </section>
 
+<!-- Map Section -->
+<section class="map-section">
+    <h2 class="text-center">My University</h2>
+    <div class="map-container">
+        <iframe 
+            width="100%"   
+            height="400"   
+            frameborder="0" 
+            scrolling="no" 
+            marginheight="0" 
+            marginwidth="0" 
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=D24%20FKT9+(TUD%20College)&amp;t=k&amp;z=19&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+        >
+        <a href="https://www.maps.ie/population/">Find Population on Map</a>
+        </iframe>
+    </div>
+</section>
 
 
 
@@ -704,6 +721,25 @@
         </div>
     </div>
 </div>
+
+
+<!-- Default Footer -->
+<footer class="footer" style="margin-top: 20px;"> <!-- Added margin-top to create a gap -->
+    <div class="container">
+        <div class="row">
+
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p>&copy; 2023 Andrei Ciobirca ©. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
 
 <script>
     function submitForm() {
@@ -777,7 +813,7 @@
 </script>
 
 
-    
+
 
 
 </body>
