Changed button on hackaton

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
         <!-- Achievements -->
         <div class="achievements-section">
             <h2>Achievements</h2>
-            <p>🏆 Winner of the <b>Best Future Solution</b> at the TUH Health Hackathon. <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hackathonModal">More Info</button></p>
+            <p>🏆 Winner of the <b>Best Future Solution</b> at the TUH Health Hackathon. <button type="button" class="btn btn-dark mt-3" data-toggle="modal" data-target="#hackathonModal">More Info</button></p>
         </div>
 
     </div>
