--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                     <div class="icon-item"><i class="fas fa-terminal fa-3x" title="Bash"></i><p>Bash</p></div>
                     <div class="icon-item"><i class="fab fa-css3-alt fa-3x" title="CSS"></i><p>CSS</p></div>
                     <div class="icon-item"><i class="fab fa-aws fa-3x" title="AWS"></i><p>AWS</p></div>
-                    <div class="icon-item"><i class="fas fa-database fa-3x" title="MySQL"></i><p>MySQL</p></div>
+                    <div class="icon-item"><i class="fas fa-database fa-3x" title="MySQL"></i><p>MySQL</p></div>    
                     <div class="icon-item"><i class="fas fa-database fa-3x" title="MariaDB"></i><p>MariaDB</p></div>
+                    <div class="icon-item"><i class="fas fa-c fa-3x" title="Blazor"></i><p>Blazor</p></div>
                 </div>
             </div>
         </div>
@@ -142,7 +143,7 @@
         <div class="row">
             <!-- CoE Business Process Consultant Intern -->
             <div class="col-md-6 mb-4">
-                <div class="rounded-box p-4" style="background-color: #f0f0f0; border-radius: 15px;">
+                <div class="rounded-box p-4" style="background-color: rgb(242, 237, 237); border-radius: 15px;">
                     <h2>CoE Business Process Consultant Intern</h2>
                     <p>SAP Ireland, Co. Dublin, Ireland</p>
                     <p>Jan' 2023 – Sept' 2023</p>
@@ -160,7 +161,7 @@
 
             <!-- TUD Student Ambassador -->
             <div class="col-md-6 mb-4">
-                <div class="rounded-box p-4" style="background-color: #f0f0f0; border-radius: 15px;">
+                <div class="rounded-box p-4" style="background-color: rgb(242, 237, 237); border-radius: 15px;">
                     <h2>TUD Student Ambassador</h2>
                     <p>Technological University Dublin, Ireland</p>
                     <p>Sept' 2023 - Present</p>
