Fixed styling issues with project and work experience sections

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <!-- TUD Student Ambassador -->
             <div class="col-md-6 mb-4">
-                <div class="rounded-box p-4" style="background-color: rgb(242, 237, 237); border-radius: 15px;">
+                <div class="rounded-box p-4" style="background-color: rgb(242, 237, 237);border-radius: 15px;">
                     <h2>TUD Student Ambassador</h2>
                     <p>Technological University Dublin, Ireland</p>
                     <p>Sept' 2023 - Present</p>
@@ -365,7 +365,7 @@
 
             <!-- Additional Projects (Initially Hidden) -->
             <div class="col-md-4 mb-4 d-none additional-project-card" id="project4">
-                 <div class="card h-100">
+                 <div class="card h-100 project-card">
                     <div class="card-body d-flex flex-column">
                         <h2>Python Snake game</h2>
                         <p class="flex-grow-1">Developing a python snake game from scratch.</p>
@@ -378,7 +378,7 @@
             </div>
 
             <div class="col-md-4 mb-4 d-none project-card" id="project5">
-                <div class="card h-100">
+                <div class="card h-100 project-card">
                     <div class="card-body">
                         <h2>Project 5</h2>
                         <p>Description of Project 5.</p>
@@ -388,7 +388,7 @@
             </div>
 
             <div class="col-md-4 mb-4 d-none project-card" id="project6">
-                <div class="card h-100">
+                <div class="card h-100 project-card">
                     <div class="card-body">
                         <h2>Project 6</h2>
                         <p>Description of Project 6.</p>
