Added Page 2 for CA2

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#contactModal" href="#">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="imdca2.html">Go to IMDCA2</a>
+                </li>
             </ul>
         </div>
     </nav>
