Added more Features

--- a/imdca2.html
+++ b/imdca2.html
@@ -37,6 +37,11 @@
                 <li>Particles.js</li>
                 <li>Google Maps integration</li>
                 <li>Smooth Scroll</li>
+                <li>Bootstrap CSS Integration</li>
+                <li>Font Awesome Icons</li>
+                <li>Custom Styles (styles.css)</li>
+                <li>Responsive Meta Tag</li>
+                <li>External Links</li>
                 
             </ul>
 
